# e-base-computer

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  NOTICE  README.md  SECURITY.md  TECHNICAL_SCOPE.md  TRADEMARKS.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  compiler_challenge.md  good_first_experiment.md
.github/workflows/: pages.yml  release.yml  tests.yml
docs/: architecture.md  behavior_model.md  challenge_kickoff.md  challenge_operations.md  compiler_challenge.md  cstyle_compiler.md  development_history.md  e_word_model.md  emulator_prototype.md  epu_instruction_set.md  epu_spec.md  long_term_storage.md  numerical_challenge.md  playground.md  publish_to_github.md  release_checklist.md  release_notes_v0_1.md  system_architecture.md  theory.md  thermal_resource_management.md  visual_qa.md  visualization_strategy.md
examples/: cstyle_demo.py  demo.py  epu_demo.py
examples/challenges/: baseline_submission.json  branching.cbase  factorial.cbase  thermal_quantization.epu
examples/compiler_starter/: README.md  emit_baseline_assembly.py
scripts/: finalize_project_urls.py  make_release_bundle.py  publication_audit.py  release_smoke.py  static_playground_smoke.cjs
src/: cstyle_compiler.py  ecomputer.py  emulator.py  epu.py  epu_challenge.py  epu_cli.py  epu_experiments.py  epu_leaderboard.py  epu_scoring.py  epu_spec.py  web_playground.py
src/e_base_computer_web/: __init__.py
src/e_base_computer_web/playground/: app.js  static-runtime.js  styles.css
tests/: test_cli_web_scoring.py  test_ecomputer.py  test_emulator_compiler.py  test_epu.py  test_release_helpers.py
web/playground/: index.html  static-runtime.js  styles.css
